# hf-mem

./: README.md  pyproject.toml
src/hf_mem/: cli.py  metadata.py  pytorch_bin.py  types.py
src/hf_mem/connectors/: __init__.py  azure.py  base.py  gcs.py  hf.py  local.py  s3.py
