[project]
name = "hf-mem"
version = "0.4.4"
description = "A CLI to estimate inference memory requirements for Hugging Face models, written in Python."
readme = "README.md"
authors = [
    { name = "Alvaro Bartolome", email = "alvarobartt@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.28.1",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28.0"]
gcs = ["google-cloud-storage>=2.0.0"]
azure = ["azure-storage-blob>=12.19.0", "azure-identity>=1.15.0"]
all = ["boto3>=1.28.0", "google-cloud-storage>=2.0.0", "azure-storage-blob>=12.19.0", "azure-identity>=1.15.0"]

[project.urls]
Homepage = "https://github.com/alvarobartt/hf-mem"
Repository = "https://github.com/alvarobartt/hf-mem"
Issues = "https://github.com/alvarobartt/hf-mem/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = false

[project.scripts]
hf-mem = "hf_mem.cli:main"
